// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Policies directive Both policies approved 1`] = `
Object {
  "pd_bar": "FOO",
  "pd_foo": "FOO",
}
`;

exports[`Policies directive Both policies rejected 1`] = `
{
  "errors": [
    {
      "message": "UnauthorizedByPolicyError: Unauthorized by policy isAlpha in namespace auth_policies\\nUnauthorizedByPolicyError: Unauthorized by policy isBeta in namespace auth_policies",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "pd_foo"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policies directive First policy rejected 1`] = `
{
  "errors": [
    {
      "message": "UnauthorizedByPolicyError: Unauthorized by policy isAlpha in namespace auth_policies",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "pd_bar"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Policies directive Second policy rejected 1`] = `
{
  "errors": [
    {
      "message": "UnauthorizedByPolicyError: Unauthorized by policy isBeta in namespace auth_policies",
      "errorCode": "INTERNAL_SERVER_ERROR",
      "path": [
        "pd_bar"
      ]
    }
  ],
  "data": {}
}
`;
